# hermes-jsi-playground

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  jslib.js  main.cpp  main.js
